# pareas

./: .gitignore  README.md  flake.nix  futhark.pkg  meson.build  meson_options.txt  pareas2c.cpp  run_test.sh  run_tests.sh  uN
doc/: language.md  lpg.md
examples/: fib.par  gcd.par  sqrt.par
frontend/src/: graph.hpp  opg.hpp  trie.hpp
include/codegen/: astnode.hpp  datatype.hpp  depthtree.hpp  exception.hpp  lexer.hpp  parser.hpp  symtab.hpp  token.hpp  treeproperties.hpp
include/converter/: converter.hpp
include/pareas/common/: cli_util.hpp  error_reporter.hpp  escape.hpp  futhark_dataset.hpp  hash_util.hpp  parser.hpp  render_util.hpp
include/pareas/compiler/: ast.hpp  backend.hpp  frontend.hpp  futhark_interop.hpp  module.hpp  profiler.hpp
include/pareas/json/: futhark_interop.hpp
include/pareas/lexgen/: char_range.hpp  fsa.hpp  interpreter.hpp  lexer_parser.hpp  parallel_lexer.hpp  regex.hpp  regex_parser.hpp  render.hpp
include/pareas/llpgen/: admissible_pair.hpp  error_reporter.hpp  generator.hpp  grammar.hpp  grammar_parser.hpp  hash_util.hpp  item.hpp  item_set.hpp  ll.hpp  ll_table.hpp  llp_table.hpp  psls_table.hpp  terminal_set_functions.hpp
include/pareas/lpg/: cli_util.hpp  error_reporter.hpp  escape.hpp  futhark_dataset.hpp  hash_util.hpp  parser.hpp  render_util.hpp  renderer.hpp  token_mapping.hpp
include/pareas/profiler/: profiler.hpp
include/profiler/: profiler.hpp
include/test/: assignexprastnodetempl.hpp  astgenerator.hpp  astnode.hpp  astnodetempl.hpp  castexprastnodetempl.hpp  coderenderer.hpp  compexprastnodetempl.hpp  condastnodetempl.hpp  datatype.hpp  declareexprastnodetempl.hpp  defaulttreeprinter.hpp  derefexprastnodetempl.hpp  exprastnodetempl.hpp  fixedastnodetempl.hpp  funccallastnodetempl.hpp  funcdeclastnodetempl.hpp  idcreaterenderstate.hpp  idexprastnodetempl.hpp  litastnodetempl.hpp  noderenderstate.hpp  nodetype.hpp  optionrenderstate.hpp  renderstate.hpp  returnastnodetempl.hpp  scoperenderstate.hpp  sourcefileprinter.hpp  statementlistastnodetempl.hpp  textrenderstate.hpp  treeprinter.hpp  treeproperties.hpp  unaryexprastnodetempl.hpp
include/test/old/: coderenderer.hpp  commitrenderstate.hpp  idcreaterenderstate.hpp  idrenderstate.hpp  indentrenderstate.hpp  randomfloatrenderstate.hpp  randomintrenderstate.hpp  renderstate.hpp  repeatrenderstate.hpp
papertools/: make_bar_graphs.py  make_line.py  make_prop_tab.py  make_table.py
results/: processed.csv  results.csv  summarize_result.sh  summarize_results.sh
results.real/: results.csv  summarize_result.sh  summarize_results.sh
results.real/basic/1.in/: 0.out  1.out  15.out  17.out  18.out  22.out  25.out  29.out  3.out  30.out  4.out  7.out  9.out
results.real/basic/2.in/: 13.out  17.out  2.out  3.out  30.out  4.out  5.out  7.out
results.real/basic/3.in/: 23.out  3.out  4.out
results.real/basic/4.in/: 12.out  17.out  2.out  26.out  4.out  7.out
results.real/basic/5.in/: 1.out  10.out  14.out  15.out  18.out  20.out  21.out  22.out  23.out  25.out  6.out  8.out  9.out
results.real/basic/6.in/: 1.out  11.out  12.out  17.out  23.out  27.out  28.out  29.out  8.out
results.real/basic/7.in/: 11.out  12.out  18.out  2.out  20.out  21.out  25.out  3.out  30.out
results/basic/: 1.in.props  2.in.props  3.in.props  4.in.out  5.in.out  6.in.props  7.in.out  8.in.out
results/funclen/: 1.in.out  2.in.props  3.in.out  4.in.props  5.in.out  6.in.out  7.in.out  8.in.props
results/shape/: 1.in.out  1.in.props  2.in.out  2.in.props  3.in.out  3.in.props  4.in.out  4.in.props  5.in.out  5.in.props  6.in.out  6.in.props
src/: bridge.fut  conversion.cpp  datatypes.fut  grammar.h  grammar.hpp  graph.cpp  graph.hpp  instr.fut  instr_count.fut  lisp.fut  main  main.c  main.cpp  main.fut  opg.h  opg.hpp  opp.hpp  optimizer.fut  postprocess.fut  preprocess.fut  register.fut  symtab.fut  tree.fut
src/codegen/: astnode.cpp  datatype.cpp  depthtree.cpp  lexer.cpp  parser.cpp  symtab.cpp  token.cpp  treeproperties.cpp
src/common/: cli_util.cpp  error_reporter.cpp  parser.cpp
src/compiler/: ast.cpp  backend.cpp  backend.fut  backend2.cpp  bridge.fut  datatypes.fut  frontend.cpp  frontend.fut  instr.fut  main.cpp  main.fut  module.cpp  profiler.cpp  sexpr.fut  string.fut  tree.fut  util.fut
src/converter/: converter.cpp  pareas2c.cpp
src/json/: json.g  json.lex  main.cpp  main.fut
src/lexgen/: char_range.cpp  fsa.cpp  interpreter.cpp  lexer_parser.cpp  main.cpp  parallel_lexer.cpp  regex.cpp  regex_parser.cpp  render.cpp
src/llpgen/: admissible_pair.cpp  admissible_pair.hpp  configuration.cpp  configuration.hpp  error_reporter.cpp  generator.cpp  generator.hpp  grammar.cpp  grammar.hpp  grammar_parser.cpp  item.cpp  item.hpp  item_set.cpp  item_set.hpp  ll.cpp  ll_table.cpp  llp_table.cpp  llp_table.hpp  llpgen_rt.fut  llpgen_rt_test.fut  main.cpp  psls.cpp  psls.hpp  psls_table.cpp  psls_table.hpp  terminal_set_functions.cpp
src/lpg/: cli_util.cpp  error_reporter.cpp  main.cpp  parser.cpp  renderer.cpp  token_mapping.cpp
src/profiler/: profiler.cpp
src/test/: assignexprastnodetempl.cpp  astgenerator.cpp  astnodetempl.cpp  castexprastnodetempl.cpp  coderenderer.cpp  compexprastnodetempl.cpp  condastnodetempl.cpp  declareexprastnodetempl.cpp  defaulttreeprinter.cpp  derefexprastnodetempl.cpp  exprastnodetempl.cpp  fixedastnodetempl.cpp  funccallastnodetempl.cpp  funcdeclastnodetempl.cpp  idcreaterenderstate.cpp  idexprastnodetempl.cpp  indentrenderstate.cpp  litastnodetempl.cpp  noderenderstate.cpp  randomintrenderstate.cpp  repeatrenderstate.cpp  returnastnodetempl.cpp  sourcefileprinter.cpp  statementlistastnodetempl.cpp  testgen.cpp  testmain.cpp  treeproperties.cpp  unaryexprastnodetempl.cpp
src/tools/: compile_futhark.py  gen_futhark_dataset.py  test_parser.cpp  test_parser_input.py
subprojects/: fmt.wrap
test/: larger.test  t1.test  test.input
test/basic/: 1.in  2.in  3.in  4.in  5.in
test/funclen/: 1.in  2.in  3.in  4.in  5.in  6.in  7.in  8.in
test/shape/: 3.in  4.in  5.in  6.in  7.in  8.in
tools/: test_parser_input.py
(+825 files in other folders)
